--- a/couponservice/pom.xml
+++ b/couponservice/pom.xml
@@ -71,6 +71,12 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					
+					<image>
+						<name>mabaloch/mmv2-${project.artifactId}:${aspectj.version}</name>
+					</image>
+					<pullPolicy>IF_NOT_PRESENT</pullPolicy>
+					
 				</configuration>
 			</plugin>
 		</plugins>
