--- a/couponservice/src/main/resources/application.properties
+++ b/couponservice/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://couponproductservice.cck1rortvuql.us-east-1.rds.amazonaws.com:3306/mydb
+spring.datasource.url=jdbc:mysql://docker-mysql:3306/mydb
 spring.datasource.username=root
 spring.datasource.password=12345678
 #spring.jpa.hibernate.ddl-auto=create-drop
@@ -8,4 +8,6 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.web: DEBUG
 server.error.include-message=always
 server.port=5000
+#(defualt port is 5000 for elsastic bean stalk and is required for EBS)
+
 
