--- a/productservice/src/main/resources/application.properties
+++ b/productservice/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/mydb
-spring.datasource.url=jdbc:mysql://couponproductservice.cck1rortvuql.us-east-1.rds.amazonaws.com:3306/mydb
+spring.datasource.url=jdbc:mysql://docker-mysql:3306/mydb
 spring.datasource.username=root
 #spring.datasource.password=3737
 spring.datasource.password=12345678
@@ -11,4 +11,4 @@ logging.level.org.springframework.web: DEBUG
 server.error.include-message=always
 #server.port=9090
 server.port=5000
-couponService.URL=http://couponservice-env.eba-pcrrh64q.us-east-1.elasticbeanstalk.com/couponapi/coupon/
+couponService.URL=http://coupon-app:5000/couponapi/coupon/
